--- a/Dmaker/src/main/resources/application.yaml
+++ b/Dmaker/src/main/resources/application.yaml
@@ -3,3 +3,9 @@ spring:
   h2:
     console:
       enabled: true
+jpa:
+  show-sql: true
+  properties:
+      hibernate:
+        format_sql: true
+        use_sql_comments: true
