--- a/carrot/src/main/resources/application.yaml
+++ b/carrot/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ spring:
   #      on-profile: local
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:tcp://localhost/~/test
+    url: jdbc:h2:tcp://localhost/~/test;NON_KEYWORDS=USER
     username: sa
     password:
   jpa:
