--- a/week2/build.gradle
+++ b/week2/build.gradle
@@ -22,13 +22,16 @@ repositories {
 }
 
 dependencies {
+//	implementation group 'org.postgresql', name:'postgresql',version: '42.7.3'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.h2database:h2'
+//	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.rest-assured:rest-assured'
+	runtimeOnly 'org.postgresql:postgresql'
 }
 
 tasks.named('test') {
