--- a/carrot/src/main/resources/application.yaml
+++ b/carrot/src/main/resources/application.yaml
@@ -1,16 +1,13 @@
 spring:
-  #  config:
-  #    activate:
-  #      on-profile: local
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:tcp://localhost/~/test;NON_KEYWORDS=USER
-    username: sa
-    password:
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://localhost:5432/carrot
+    username: postgres
+    password: 12345678
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         format_sql: true
