--- a/week2/.gitignore
+++ b/week2/.gitignore
@@ -25,6 +25,8 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+!**/src/main/resources/*.yml
+!**/src/main/resources/*.yaml
 
 ### NetBeans ###
 /nbproject/private/
